kustomize/overlay/prod/qa-amaan-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-amaan-prod
  labels:
    environmentId: env_6a881ccc-b076-4433-8ebd-e3c5aa995f4e
    projectId: project_881d4295-6fc2-4f3f-87ce-f2b6e64503bc
    projectName: qa-amaan-project
    environmentName: prod
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
